CARDS-1830: Creating forms via API ignores the requiredSubjectTypes setting
remove debbuging statements, fix java.util imports, edit the method of assigning properties value to the array